...
                }
            } else {
                Button {
                    NavigationUtil.popToRootView()
                    completedOnboardingFlow = true
                } label: {
                    Text("")
                }
            }
        }
        .disabled(loading)
        .onAppear(perform: listen)
        .onChange(of: authModel.authError) { value in
...
            }
        }
    }
    
    var fieldsView: some View {
        Group {
            TextField("Email", text: $emailAddress)
                .textContentType(.emailAddress)
                .textInputAutocapitalization(.never)
                .disableAutocorrection(true)
                .keyboardType(.emailAddress)
                .font(.custom("Montserrat", size: 17))
                .foregroundColor(darkGrayColor)
...
